--- a/public/index.html
+++ b/public/index.html
@@ -243,15 +243,19 @@
       <section id="location" class="bg-light">
         <div class="container">
           <h2 class="section-title">Prime Location</h2>
-          <div class="map-container" data-aos="fade-up">
-            <iframe
-              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3248.0132534979866!2d-80.87165227752384!3d35.50395050909826!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8856abb8f2866699%3A0xa188a138ecad93e1!2sDavidson%20Lake%20Norman!5e0!3m2!1ses!2sec!4v1761603252938!5m2!1ses!2sec"
-              width="100%"
-              height="450"
-              style="border: 0"
-              allowfullscreen=""
-              loading="lazy"
-            ></iframe>
+          <!-- Aquí es donde se encontraba el iframe, ahora va la imagen y el botón -->
+          <div class="location-image-wrapper" data-aos="fade-up">
+            <img
+              src="images/mapApto.png"
+              alt="Localización de la propiedad en un mapa"
+              class="location-image"
+            />
+            <a
+              href="https://www.google.com/maps/place/Davidson+Lake+Norman/@35.5039505,-80.8716523,17z/data=!3m1!4b1!4m6!3m5!1s0x8856abb8f2866699:0xa188a138ecad93e1!8m2!3d35.5039462!4d-80.8690774!16s%2Fg%2F11b64lqthj?entry=ttu"
+              target="_blank"
+              class="btn btn-primary location-map-btn"
+              >View on Map <i class="fas fa-map-marker-alt"></i
+            ></a>
           </div>
         </div>
       </section>
