--- a/public/index.html
+++ b/public/index.html
@@ -270,22 +270,56 @@
 
           <div class="swiper reviewsSwiper" data-aos="fade-up">
             <div class="swiper-wrapper">
-              <!-- Ejemplo de Review 1 -->
-              <div class="swiper-slide review-slide">
-                <img src="images/review1.jpg" alt="Guest review from Airbnb" />
+              <!-- EJEMPLO DE RESEÑA (REEMPLAZA ESTO CON TUS RESEÑAS REALES) -->
+              <div class="swiper-slide review-card">
+                <div class="review-header">
+                  <img
+                    src="images/guest-avatar-1.jpg"
+                    alt="Foto de perfil del huésped"
+                    class="guest-avatar"
+                  />
+                  <div class="guest-info">
+                    <p class="guest-name">Jane D.</p>
+                    <div class="stars" data-rating="5">
+                      <!-- Las estrellas se generarán con CSS o con íconos de Font Awesome -->
+                      <i class="fas fa-star"></i><i class="fas fa-star"></i
+                      ><i class="fas fa-star"></i><i class="fas fa-star"></i
+                      ><i class="fas fa-star"></i>
+                    </div>
+                  </div>
+                </div>
+                <p class="review-text">
+                  "¡Absolutamente impresionante! El lugar es hermoso y las
+                  vistas al lago son inmejorables. Tuvimos una estancia
+                  increíble y el anfitrión fue muy atento. ¡Volveremos!"
+                </p>
+                <span class="review-date">2 de Julio de 2024</span>
               </div>
 
-              <!-- Ejemplo de Review 2 -->
-              <div class="swiper-slide review-slide">
-                <img src="images/review2.jpg" alt="Guest review from Airbnb" />
+              <!-- EJEMPLO DE RESEÑA 2 -->
+              <div class="swiper-slide review-card">
+                <div class="review-header">
+                  <img
+                    src="images/guest-avatar-2.jpg"
+                    alt="Foto de perfil del huésped"
+                    class="guest-avatar"
+                  />
+                  <div class="guest-info">
+                    <p class="guest-name">John S.</p>
+                    <div class="stars" data-rating="4.5">
+                      <i class="fas fa-star"></i><i class="fas fa-star"></i
+                      ><i class="fas fa-star"></i><i class="fas fa-star"></i
+                      ><i class="fas fa-star-half-alt"></i>
+                    </div>
+                  </div>
+                </div>
+                <p class="review-text">
+                  "Un lugar muy acogedor y bien cuidado. Disfrutamos mucho de la
+                  tranquilidad. Solo un pequeño detalle con el WiFi que se
+                  solucionó rápidamente. ¡Recomendado!"
+                </p>
+                <span class="review-date">15 de Junio de 2024</span>
               </div>
-
-              <!-- Ejemplo de Review 3 -->
-              <div class="swiper-slide review-slide">
-                <img src="images/review3.jpg" alt="Guest review from Airbnb" />
-              </div>
-
-              <!-- Agrega más slides de reseña según necesites (review4.jpg, etc.) -->
             </div>
             <!-- Add Pagination -->
             <div class="swiper-pagination"></div>
