--- a/public/index.html
+++ b/public/index.html
@@ -268,65 +268,12 @@
             things our guests have shared about their stay.
           </p>
 
-          <div class="swiper reviewsSwiper" data-aos="fade-up">
-            <div class="swiper-wrapper">
-              <!-- EJEMPLO DE RESEÑA (REEMPLAZA ESTO CON TUS RESEÑAS REALES) -->
-              <div class="swiper-slide review-card">
-                <div class="review-header">
-                  <img
-                    src="images/guest-avatar-1.jpg"
-                    alt="Foto de perfil del huésped"
-                    class="guest-avatar"
-                  />
-                  <div class="guest-info">
-                    <p class="guest-name">Jane D.</p>
-                    <div class="stars" data-rating="5">
-                      <!-- Las estrellas se generarán con CSS o con íconos de Font Awesome -->
-                      <i class="fas fa-star"></i><i class="fas fa-star"></i
-                      ><i class="fas fa-star"></i><i class="fas fa-star"></i
-                      ><i class="fas fa-star"></i>
-                    </div>
-                  </div>
-                </div>
-                <p class="review-text">
-                  "¡Absolutamente impresionante! El lugar es hermoso y las
-                  vistas al lago son inmejorables. Tuvimos una estancia
-                  increíble y el anfitrión fue muy atento. ¡Volveremos!"
-                </p>
-                <span class="review-date">2 de Julio de 2024</span>
-              </div>
-
-              <!-- EJEMPLO DE RESEÑA 2 -->
-              <div class="swiper-slide review-card">
-                <div class="review-header">
-                  <img
-                    src="images/guest-avatar-2.jpg"
-                    alt="Foto de perfil del huésped"
-                    class="guest-avatar"
-                  />
-                  <div class="guest-info">
-                    <p class="guest-name">John S.</p>
-                    <div class="stars" data-rating="4.5">
-                      <i class="fas fa-star"></i><i class="fas fa-star"></i
-                      ><i class="fas fa-star"></i><i class="fas fa-star"></i
-                      ><i class="fas fa-star-half-alt"></i>
-                    </div>
-                  </div>
-                </div>
-                <p class="review-text">
-                  "Un lugar muy acogedor y bien cuidado. Disfrutamos mucho de la
-                  tranquilidad. Solo un pequeño detalle con el WiFi que se
-                  solucionó rápidamente. ¡Recomendado!"
-                </p>
-                <span class="review-date">15 de Junio de 2024</span>
-              </div>
-            </div>
-            <!-- Add Pagination -->
-            <div class="swiper-pagination"></div>
-            <!-- Add Navigation -->
-            <div class="swiper-button-next"></div>
-            <div class="swiper-button-prev"></div>
-          </div>
+          <!-- Código de Elfsight de reseñas -->
+          <div
+            class="elfsight-app-358ee810-2f90-439a-9f20-30533572b6f6"
+            data-elfsight-app-lazy
+          ></div>
+          <script src="https://elfsightcdn.com/platform.js" async></script>
 
           <div class="view-more-reviews">
             <a
