--- a/public/index.html
+++ b/public/index.html
@@ -298,7 +298,7 @@
               class="airbnb-button-image-link"
             >
               <img
-                src="images/airbnb-logo-full.svg"
+                src="images/airbnb-logo-full.png"
                 alt="Book on Airbnb"
                 class="airbnb-custom-button"
               />
